--- a/handout/DFT.tex
+++ b/handout/DFT.tex
@@ -228,7 +228,7 @@ Then for all $\ell \in -n \dots n$, we have
 \end{handlist}
  \end{frame}
  
- \begin{frame}{Fourier coefficients}
+ \begin{frame}{The Fourier coefficients}
  
  For any function $F$ that is integrable on the interval $[0,2 \uppi]$ the numbers $c_k$ defined as
  \begin{equation*}
