try new typeface

--- a/handout/DFT.tex
+++ b/handout/DFT.tex
@@ -10,7 +10,7 @@
 %\usepackage{fourier}
 \usepackage{upgreek}
 %\raggedright
-
+\usepackage[sfdefault]{FiraSans}
 % Custom commands
 \newcommand{\fma}{{\rm fma}}
 \newcommand{\reals}{\mathbf{R}}
