--- a/handout/DFT.tex
+++ b/handout/DFT.tex
@@ -7,10 +7,11 @@
 \usepackage{enumerate}
 \usepackage{cancel}
 \usepackage{fontawesome5}
-%\usepackage{fourier}
+\usepackage{fourier}
 \usepackage{upgreek}
 %\raggedright
-\usepackage[sfdefault]{FiraSans}
+%\usepackage[sfdefault]{FiraSans}
+%\usepackage{FiraMono} 
 % Custom commands
 \newcommand{\fma}{{\rm fma}}
 \newcommand{\reals}{\mathbf{R}}
