--- a/Julia-notebooks/geometricMean.ipynb
+++ b/Julia-notebooks/geometricMean.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "762ffaa3-a8e6-420b-8bca-8bdb79bf5613",
+   "id": "991164ee-3fa5-4410-b2e9-1e1c41e46118",
    "metadata": {},
    "source": [
     " ## Geometric mean\n",
     " _CYBR 304 & MATH 420_ <br>\n",
     " Spring 2024 <br>\n",
+    "\n",
+    "\n",
+    "To write robust numerical code, we must be aware of over and underflow, numerical accuracy, and we need to give \"edge cases\" special attention. This Julia worksheet illustrates some of these issues for computing the geometric mean. In this context, edge cases include the geometric sum of the empty list as well as how to handle Julia's extended real numbers `Inf` and `NaN`.\n",
     "\n",
     "The _geometric mean_ $\\mathrm{GM}$ of nonnegative numbers $x_1, x_2, \\dots, x_n$ is the nth root of their product. Specifically\n",
     "$$\n",
