--- a/Julia-notebooks/geometricMean.ipynb
+++ b/Julia-notebooks/geometricMean.ipynb
@@ -1,14 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "id": "7084dd9e-827e-4253-b514-2a66080a8059",
+   "cell_type": "markdown",
+   "id": "89664dd6-9c9a-4935-81b8-85113c8d2310",
    "metadata": {},
    "source": [
     " ## Geometric mean\n",
     " _CYBR 304 & MATH 420_ <br>\n",
     " Spring 2024 <br>\n",
-    "\n",
     "\n",
     "To write robust numerical code, we must be aware of numerical over and underflow, numerical accuracy, and we need to give \"edge cases\" special attention. This Julia worksheet illustrates some of these issues for computing the geometric mean. In this context, edge cases include the geometric sum of the empty list as well as how to handle Julia's extended real numbers `Inf` and `NaN`.\n",
     "\n",
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "3855076a-afd7-444a-b15e-ead6e3e20b12",
    "metadata": {
     "tags": []
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "50b785c3",
    "metadata": {
     "tags": []
@@ -99,7 +98,7 @@
        "(10.0, 10.0)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "cd55fbb6",
    "metadata": {
     "tags": []
@@ -122,7 +121,7 @@
        "(2.2133638394006434, 2.2133638394006434)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "10447c0b",
    "metadata": {
     "tags": []
@@ -145,7 +144,7 @@
        "(0.0, 0.0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "56a708e7",
    "metadata": {
     "tags": []
@@ -176,7 +175,7 @@
        "Inf"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "5c92d8b3",
    "metadata": {
     "tags": []
@@ -207,7 +206,7 @@
        "NaN"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "id": "1e6c6203-3267-4585-bc75-c96761833224",
    "metadata": {
     "tags": []
@@ -241,9 +240,9 @@
       "",
       "Stacktrace:",
       " [1] geometric_mean(a::Vector{Int64})",
-      "   @ Main .\\In[28]:7",
+      "   @ Main .\\In[3]:7",
       " [2] top-level scope",
-      "   @ In[42]:1"
+      "   @ In[11]:1"
      ]
     }
    ],
@@ -253,21 +252,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ec33b406-3725-4d41-9c64-4b3539030957",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "ArgumentError: The input to geometric_mean must be a nonempty array.",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: The input to geometric_mean must be a nonempty array.",
+      "",
+      "Stacktrace:",
+      " [1] geometric_mean(a::Vector{Float64})",
+      "   @ Main .\\In[3]:7",
+      " [2] top-level scope",
+      "   @ In[12]:1"
+     ]
     }
    ],
    "source": [
@@ -284,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "191a225f",
    "metadata": {
     "tags": []
@@ -296,7 +299,7 @@
        "0.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "ccb16761-057e-48c1-b441-883441d964e4",
    "metadata": {
     "tags": []
@@ -336,9 +339,9 @@
       " [3] ^",
       "   @ .\\promotion.jl:456 [inlined]",
       " [4] geometric_mean(a::Vector{Int64})",
-      "   @ Main .\\In[28]:8",
+      "   @ Main .\\In[3]:8",
       " [5] top-level scope",
-      "   @ In[44]:1"
+      "   @ In[14]:1"
      ]
     }
    ],
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "1a63ffed",
    "metadata": {
     "tags": []
@@ -368,7 +371,7 @@
        "3.7113075237539723 + 1.172093654906827im"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "19f15af9",
    "metadata": {
     "tags": []
@@ -399,7 +402,7 @@
        "Inf"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "id": "f91d2bc6-3a25-4ff1-a725-4966101c3418",
    "metadata": {
     "tags": []
@@ -444,7 +447,7 @@
        "0.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "9e5ea4c5",
    "metadata": {
     "tags": []
@@ -499,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "b9bdb3be",
    "metadata": {
     "tags": []
@@ -511,7 +514,7 @@
        "(10.000000000000002, 10.0)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "id": "f9ec82da",
    "metadata": {
     "tags": []
@@ -534,7 +537,7 @@
        "(2.213363839400643, 2.2133638394006434)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "id": "47f8d342",
    "metadata": {
     "tags": []
@@ -565,7 +568,7 @@
        "1.000000000000028e155"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "id": "2d3578bb",
    "metadata": {
     "tags": []
@@ -596,7 +599,7 @@
        "0.0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "45618103",
    "metadata": {
     "tags": []
@@ -631,7 +634,7 @@
        "   1.0986122886681098"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "24557683",
    "metadata": {
     "tags": []
@@ -654,7 +657,7 @@
        "-Inf"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "id": "ecec0e58",
    "metadata": {
     "tags": []
@@ -677,7 +680,7 @@
        "-Inf"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "id": "72d8f1ff",
    "metadata": {
     "tags": []
@@ -700,7 +703,7 @@
        "0.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "id": "19f3bbb5-f472-4303-a69c-280995615414",
    "metadata": {
     "tags": []
@@ -739,7 +742,7 @@
        "1.1113793747425387e-162"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 36,
    "id": "9998d99c-16b7-453e-896a-c0fb2552a4ae",
    "metadata": {
     "tags": []
@@ -762,7 +765,7 @@
        "0.0"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 37,
    "id": "0db1d0bf-1d7c-48d5-ae77-c558fee670e8",
    "metadata": {
     "tags": []
@@ -796,9 +799,9 @@
       "",
       "Stacktrace:",
       " [1] geometric_mean_log(a::Vector{Float64})",
-      "   @ Main .\\In[57]:8",
+      "   @ Main .\\In[21]:8",
       " [2] top-level scope",
-      "   @ In[85]:1"
+      "   @ In[37]:1"
      ]
     }
    ],
@@ -820,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 38,
    "id": "bebbe640",
    "metadata": {
     "tags": []
@@ -832,7 +835,7 @@
        "geometric_mean2"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 39,
    "id": "acbcbf41-41b5-4c6a-8375-e5a84f1ca1d8",
    "metadata": {
     "tags": []
@@ -887,9 +890,9 @@
       "",
       "Stacktrace:",
       " [1] geometric_mean2(a::Vector{Float64})",
-      "   @ Main .\\In[87]:7",
+      "   @ Main .\\In[38]:7",
       " [2] top-level scope",
-      "   @ In[89]:1"
+      "   @ In[39]:1"
      ]
     }
    ],
@@ -899,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 40,
    "id": "bc0790bc",
    "metadata": {
     "tags": []
@@ -911,7 +914,7 @@
        "1.0e155"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 41,
    "id": "042e75d8",
    "metadata": {
     "tags": []
@@ -934,7 +937,7 @@
        "1.0e308"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 43,
    "id": "ef7ab8f8",
    "metadata": {
     "tags": []
@@ -973,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 45,
    "id": "6c4b121f-6aee-4a8c-bedf-5f0a2d6444d3",
    "metadata": {
     "tags": []
@@ -985,7 +988,7 @@
        "1.1113793747425612e-162"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 46,
    "id": "996978a1-9cc7-4e7e-843e-14fecd9b9519",
    "metadata": {
     "tags": []
@@ -1016,7 +1019,7 @@
        "(4.5671926166570814e46, 4.567192616659072e46)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 48,
    "id": "202af33c-d83f-422c-9454-b0747e233b14",
    "metadata": {
     "tags": []
@@ -1047,7 +1050,7 @@
        "(4.567192616659072e46, 4.567192616659072e46)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 49,
    "id": "4aaf192c-9eeb-4595-8cf8-38c725341eec",
    "metadata": {
     "tags": []
@@ -1087,9 +1090,9 @@
       " [2] exponent",
       "   @ .\\math.jl:1009 [inlined]",
       " [3] geometric_mean2(a::Vector{Float64})",
-      "   @ Main .\\In[87]:16",
+      "   @ Main .\\In[38]:16",
       " [4] top-level scope",
-      "   @ In[108]:1"
+      "   @ In[49]:1"
      ]
     }
    ],
@@ -1107,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 51,
    "id": "da002a75-ee14-4ed0-b170-a90422dc6354",
    "metadata": {
     "tags": []
@@ -1119,7 +1122,7 @@
        "Inf"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 52,
    "id": "da9e1b15",
    "metadata": {
     "tags": []
@@ -1154,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 53,
    "id": "0f6fe138",
    "metadata": {
     "tags": []
@@ -1164,16 +1167,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  35.612 ms (1 allocation: 16 bytes)\n"
+      "  35.622 ms (1 allocation: 16 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.3677446276820447"
+       "0.3677279563549903"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 54,
    "id": "e174f24c",
    "metadata": {
     "tags": []
@@ -1194,16 +1197,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  86.751 ms (1 allocation: 16 bytes)\n"
+      "  86.364 ms (1 allocation: 16 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.3677446276820447"
+       "0.3677279563549903"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 55,
    "id": "1c35f8f6-afa1-479d-a2b7-6f693072463b",
    "metadata": {
     "tags": []
@@ -1233,7 +1236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4.349 ms (1 allocation: 16 bytes)\n"
+      "  4.353 ms (1 allocation: 16 bytes)\n"
      ]
     },
     {
@@ -1242,7 +1245,7 @@
        "0.0"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
