--- a/Julia-notebooks/geometricMean.ipynb
+++ b/Julia-notebooks/geometricMean.ipynb
@@ -52,8 +52,7 @@
     "tags": []
    },
    "source": [
-    "But mathematically, I would say that it's best to declare that the zeorth root of one is undefined; thus I think it's best if our function throws an Argument error for a empty array.\n",
-    "With that in mind, our first effort for a Julia function for the geometric mean is little more than a direct translation of the definition. Here we use the Julia function `prod` to evaluate the product of the members of an array."
+    "But mathematically, I would say that it's best to declare that the zeorth root of one is undefined; thus I think it's best if our function throws an Argument error for a empty array. With that in mind, our first effort for a Julia function for the geometric mean is little more than a direct translation of the definition. Here we use the Julia function `prod` to evaluate the product of the members of an array."
    ]
   },
   {
@@ -1257,7 +1256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9588e2-8c9c-4c81-8f97-2908f8912069",
+   "id": "85bede68-2be0-4726-8a50-b7a39138f20f",
    "metadata": {},
    "outputs": [],
    "source": []
