--- a/Exams/exam-3-review-cyber-304-spring-2024.tex
+++ b/Exams/exam-3-review-cyber-304-spring-2024.tex
@@ -100,7 +100,7 @@ $\langle f, g-h \rangle = \langle f, g \rangle - \langle f, h \rangle
 
 \part Find a real number $\alpha$ such that $f$ and $f + \alpha g$ are perpendicular.
 \begin{solution}
-  $\left[ \langle f, f + \alpha g \rangle$
+  $\left[ \langle f, f + \alpha g \rangle \right]$
 \end{solution}
 
 \part Find a real number $\beta$ such that $g$ and $g+ \alpha h$ are perpendicular.
