--- a/Julia-notebooks/geometricMean.ipynb
+++ b/Julia-notebooks/geometricMean.ipynb
@@ -915,7 +915,7 @@
    "id": "37ea485a-ee40-463a-80ce-e5d330016b73",
    "metadata": {},
    "source": [
-    "This two results should be the same, but they are not"
+    "These two results should be the same, but they are not"
    ]
   },
   {
