--- a/Julia-notebooks/geometricMean.ipynb
+++ b/Julia-notebooks/geometricMean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89664dd6-9c9a-4935-81b8-85113c8d2310",
+   "id": "0bef1754-c6c4-445e-85a2-2831d149c19b",
    "metadata": {},
    "source": [
     " ## Geometric mean\n",
@@ -19,46 +19,14 @@
     "\n",
     "One property of the geometric mean is that $\\mathrm{GM}(x,x) = x$ is an identity for all nonnegative numbers $x$. We'll use this identity as a test for our Julia code. Another property of the geometric mean is that any one of the numbers $x_1, x_2, \\dots, x_n$ is zero, the geometric mean of these numbers is zero.\n",
     "\n",
-    "When the input array is empty, we need to decide what to do. For an empty array, the Julia function `prod` returns the multiplicative identity for the type of the array; for example"
+    "When the input array is empty, we need to decide what to do. The convention in mathematics is that an empty product is the multiplicative identity, making the geometric mean of an empty list is the zeroth root of one. But the zeroth root of one is indeterminate, so we should write or code so that geometric mean of an empty list throws\n",
+    "an error."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d4607d62-ff91-4e3f-b4dd-68ae071596cd",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 1.0)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(prod(Int64[]), prod(Float64[]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1141125a-4fb2-462b-9459-e17e465ebff2",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "But mathematically, I would say that it's best to declare that the zeroth root of one is undefined; thus I think it's best if our function throws an Argument error for an empty array. With that in mind, our first effort for a Julia function for the geometric mean is little more than a direct translation of the definition. Here we use the Julia function `prod` to evaluate the product of the members of an array."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3855076a-afd7-444a-b15e-ead6e3e20b12",
+   "id": "721b19ab-b0ab-4aa7-bec1-9448dc231012",
    "metadata": {
     "tags": []
    },
@@ -85,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "50b785c3",
    "metadata": {
     "tags": []
@@ -97,7 +65,7 @@
        "(10.0, 10.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "cd55fbb6",
    "metadata": {
     "tags": []
@@ -120,7 +88,7 @@
        "(2.2133638394006434, 2.2133638394006434)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "10447c0b",
    "metadata": {
     "tags": []
@@ -143,7 +111,7 @@
        "(0.0, 0.0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "56a708e7",
    "metadata": {
     "tags": []
@@ -174,7 +142,7 @@
        "Inf"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5c92d8b3",
    "metadata": {
     "tags": []
@@ -205,13 +173,52 @@
        "NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "geometric_mean([Inf, 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4ef2c4e-9858-4092-89ae-6751056ca3f6",
+   "metadata": {},
+   "source": [
+    "Possibly, an input that both `Inf` and `Inf` could be handled more gracefully:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "489bc06b-80d3-45a9-a8f1-e2e53252d8fb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "DomainError with -Inf:\nExponentiation yielding a complex result requires a complex argument.\nReplace x^y with (x+0im)^y, Complex(x)^y, or similar.",
+     "output_type": "error",
+     "traceback": [
+      "DomainError with -Inf:\nExponentiation yielding a complex result requires a complex argument.\nReplace x^y with (x+0im)^y, Complex(x)^y, or similar.",
+      "",
+      "Stacktrace:",
+      " [1] throw_exp_domainerror(x::Float64)",
+      "   @ Base.Math .\\math.jl:41",
+      " [2] ^(x::Float64, y::Float64)",
+      "   @ Base.Math .\\math.jl:1206",
+      " [3] geometric_mean(a::Vector{Float64})",
+      "   @ Main .\\In[2]:8",
+      " [4] top-level scope",
+      "   @ In[12]:1"
+     ]
+    }
+   ],
+   "source": [
+    "geometric_mean([Inf, -Inf])"
    ]
   },
   {
@@ -239,7 +246,7 @@
       "",
       "Stacktrace:",
       " [1] geometric_mean(a::Vector{Any})",
-      "   @ Main .\\In[4]:7",
+      "   @ Main .\\In[2]:7",
       " [2] top-level scope",
       "   @ In[13]:1"
      ]
@@ -312,7 +319,7 @@
       " [3] ^",
       "   @ .\\promotion.jl:456 [inlined]",
       " [4] geometric_mean(a::Vector{Int64})",
-      "   @ Main .\\In[4]:8",
+      "   @ Main .\\In[2]:8",
       " [5] top-level scope",
       "   @ In[17]:1"
      ]
@@ -739,20 +746,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "288b8dfd-2667-4fe1-bef5-895ccc4be932",
+   "cell_type": "raw",
+   "id": "bc9d75a4-c8b2-47f6-bdb0-c4321fb06fd4",
    "metadata": {},
    "source": [
     "For an array with many elements, computing the logarithm is slow. Can we avoid overflow without using the logarithm trick? Sure, we'll just loop through the array members and after each partial product, we'll extract the exponent and the significand of the partial product.  We'll keep a running sum of the exponent as a 64-bit integer.\n",
     "\n",
-    "There doesn't seem to be a Julia function that reliably returns the base of a floating point number, so we will be content to require that the input to this function be an array of `Float64` numbers. \n",
-    "\n",
-    "Again, we trap for an empty sum. Without this trap, at the end of the `for x in a` loop, both `e` and `n` have the values of zero. That division yields `NaN`, but we don't want that, so we include a special trap for an empty sum"
+    "Regardless of the radix, the Julia functions `exponent` and `significand` return a radix two value. Thus this code should work correctly even for radix ten numbers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "bebbe640",
    "metadata": {
     "tags": []
@@ -760,11 +765,11 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "    geometric_mean(a::Array{Float64})\n",
+    "    geometric_mean2(a::AbstractArray{<:AbstractFloat})\n",
     "\n",
-    "Compute the geometric mean of the elements in the input array `a`. \n",
+    "Compute the geometric mean of the elements in the input array `a`.  When the array is empty, throw an error.\n",
     "\"\"\"\n",
-    "function geometric_mean2(a::Array{Float64})\n",
+    "function geometric_mean2(a::AbstractArray{<:AbstractFloat})\n",
     "    isempty(a) && throw(ArgumentError(\"The input to geometric_mean must be a nonempty array.\"))\n",
     "    n = length(a)\n",
     "    e = 0\n",
@@ -788,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "acbcbf41-41b5-4c6a-8375-e5a84f1ca1d8",
    "metadata": {
     "tags": []
@@ -802,20 +807,20 @@
       "ArgumentError: The input to geometric_mean must be a nonempty array.",
       "",
       "Stacktrace:",
-      " [1] geometric_mean2(a::Vector{Float64})",
-      "   @ Main .\\In[43]:7",
+      " [1] geometric_mean2(a::Vector{Float16})",
+      "   @ Main .\\In[42]:7",
       " [2] top-level scope",
-      "   @ In[45]:1"
+      "   @ In[44]:1"
      ]
     }
    ],
    "source": [
-    "geometric_mean2(Float64[])"
+    "geometric_mean2(Float16[])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "bc0790bc",
    "metadata": {
     "tags": []
@@ -827,7 +832,7 @@
        "1.0e155"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "042e75d8",
    "metadata": {
     "tags": []
@@ -850,7 +855,7 @@
        "1.0e308"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "ef7ab8f8",
    "metadata": {
     "tags": []
@@ -889,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "id": "6c4b121f-6aee-4a8c-bedf-5f0a2d6444d3",
    "metadata": {
     "tags": []
@@ -901,7 +906,7 @@
        "1.1113793747425612e-162"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "id": "996978a1-9cc7-4e7e-843e-14fecd9b9519",
    "metadata": {
     "tags": []
@@ -932,7 +937,7 @@
        "(4.5671926166570814e46, 4.567192616659072e46)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "202af33c-d83f-422c-9454-b0747e233b14",
    "metadata": {
     "tags": []
@@ -963,7 +968,7 @@
        "(4.567192616659072e46, 4.567192616659072e46)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "4aaf192c-9eeb-4595-8cf8-38c725341eec",
    "metadata": {
     "tags": []
@@ -1003,9 +1008,9 @@
       " [2] exponent",
       "   @ .\\math.jl:1009 [inlined]",
       " [3] geometric_mean2(a::Vector{Float64})",
-      "   @ Main .\\In[43]:13",
+      "   @ Main .\\In[42]:13",
       " [4] top-level scope",
-      "   @ In[57]:1"
+      "   @ In[56]:1"
      ]
     }
    ],
@@ -1015,16 +1020,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f09af52-b8ff-4781-ae8b-6c61381b8ce0",
-   "metadata": {},
+   "id": "5ac7cd7c-1f5f-41a0-b962-fa04ac678f3a",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "But the `geomean` function properly returns `Inf` for this case"
+    "But the geomean function properly returns Inf for this case\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "da002a75-ee14-4ed0-b170-a90422dc6354",
+   "execution_count": 58,
+   "id": "0d55cc60-2176-4b3a-93e9-5cbf23ecbc1c",
    "metadata": {
     "tags": []
    },
@@ -1035,13 +1042,75 @@
        "Inf"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "geomean([2,20,Inf])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d3a6fca-d8c1-49de-8a1a-f1f9d7dd5fe2",
+   "metadata": {},
+   "source": [
+    "And a few quick checks too"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "925b8043-0195-4c1e-a5b0-9b6aecca3c7c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "geometric_mean2([5.0,20.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "2fd38b21-ffdc-433c-8c17-aee43e7c5fd5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7.368062997280774, 7.368062997280773)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "geometric_mean2([5.0,20.0, 4.0]), (5.0 * 20.0 * 4.0)^(1/3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f09af52-b8ff-4781-ae8b-6c61381b8ce0",
+   "metadata": {},
+   "source": [
+    "But the `geomean` function properly returns `Inf` for this case"
    ]
   },
   {
@@ -1058,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "id": "c8401005-27d9-4007-a3ce-c82920253aa5",
    "metadata": {
     "tags": []
@@ -1070,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "id": "0f6fe138",
    "metadata": {
     "tags": []
@@ -1080,16 +1149,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  35.587 ms (1 allocation: 16 bytes)\n"
+      "  35.622 ms (1 allocation: 16 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.3679763891333389"
+       "0.36799148422814704"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "id": "e174f24c",
    "metadata": {
     "tags": []
@@ -1110,16 +1179,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  86.442 ms (1 allocation: 16 bytes)\n"
+      "  86.617 ms (1 allocation: 16 bytes)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.3679763891333389"
+       "0.3679914842281471"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "id": "1c35f8f6-afa1-479d-a2b7-6f693072463b",
    "metadata": {
     "tags": []
@@ -1148,7 +1217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4.357 ms (1 allocation: 16 bytes)\n"
+      "  4.349 ms (1 allocation: 16 bytes)\n"
      ]
     },
     {
@@ -1157,7 +1226,7 @@
        "0.0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,8 +1237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "id": "85bede68-2be0-4726-8a50-b7a39138f20f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "using Pandoc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "203b48fc-9d35-4ede-bed0-d7e7b64a72a2",
    "metadata": {},
    "outputs": [],
    "source": []
