--- a/Julia-notebooks/quadratic_formula.ipynb
+++ b/Julia-notebooks/quadratic_formula.ipynb
@@ -5,17 +5,21 @@
    "metadata": {},
    "source": [
     "# Quadratic Formula\n",
-    "CYBR 304 <br>\n",
+    "CYBR 304 & MATH 420 <br>\n",
     "_Spring 2024_ <br>\n",
     "\n",
     "Let's write a Julia function that finds the roots of a quadratic equation; easy-peasy right? Wrong.  \n",
     "\n",
-    "We start with the formula that we all know and love: "
+    "We start with the formula that we all know and love; that is \n",
+    "$$\n",
+    "  \\frac{-b \\pm \\sqrt{d}}{2 a},\n",
+    "$$\n",
+    "where $d = \\sqrt{b^2 - 4 a c}$.  Translating that into a Julia function, we have"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +28,7 @@
        "solve_quadratic1 (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,17 +41,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "Possibly we should special case $a = 0$ so that we don't divide by zero, but we'll leave that for another day.\n",
     "\n",
-    "Let's _manufacture_ coefficients with a known roots; say the solutions are $r_1$  and $1/r_1$, where"
+    "To test our code, let's _manufacture_ a second degree polynomial with known roots; say the solutions are $r_1$  and $1/r_1$, where"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +60,7 @@
        "8.0e7"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +80,7 @@
        "1.25e-8"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +107,7 @@
        "(1, -8.000000000000001e7, 1.0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +134,7 @@
        "(8.0e7, 1.4901161193847656e-8)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,12 +147,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One solution is $1.25 \\times 10^{-8}$, but we get $1.4901161193847656 \\times 10^{-8}$. Oh, that's _terrible_. Using the alternative quadratic formula with the radicals in the denominator, our function is"
+    "One solution is $8.00 \\times 10^7$ as it should be, but the other solution should be  $1.25 \\times 10^{-8}$, but we get $1.4901161193847656 \\times 10^{-8}$. Oh, that's _terrible_.  What has happended?  Apparently, our calculation has been corrupted by subtractive cancellation. When $b > 0$ and $b^2 \\gg 4 a c$, we have $\\sqrt{b^2 - 4 a c} \\approx b$. And that makes the addition in $-b + \\sqrt{b^2 - 4 a c}$ ill conditioned.\n",
+    "\n",
+    "Fortunately, there is a cure. There is a lesser-known variant of the quadratic formula that puts the radical in the demonominator. Specifically,\n",
+    "$$\n",
+    " -b \\pm \\sqrt{d}  =  -b \\pm \\sqrt{d} \\times \\frac{ -b \\mp \\sqrt{d}}{ -b \\mp \\sqrt{d}} = \\frac{b^2  -  d}{ -b \\mp \\sqrt{d}}\n",
+    "   = \\frac{4 a c}{ -b \\mp \\sqrt{d}}.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Using the alternative quadratic formula with the radicals in the denominator, our function is"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +170,7 @@
        "solve_quadratic2 (generic function with 1 method)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +200,7 @@
        "(6.7108864e7, 1.25e-8)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +230,7 @@
        "solve_quadratic3 (generic function with 1 method)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +261,7 @@
        "(8.0e7, 1.25e-8)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +288,7 @@
        "(9.4906265625e7, -1.89812534e8, 9.4906268375e7)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +315,7 @@
        "0.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +342,7 @@
        "(1.0000000144879793, 1.000000014487979)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +378,7 @@
        "(1.000000028975958351011137469355042911583320450556396022983861872923629745862732, 1.0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +405,7 @@
        "-1.448797909027560902762695018153800184704077102298386187292362974586273239852133e-08"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +425,7 @@
        "1.44879790386909235166967846453189849853515625e-08"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,5 +507,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
