--- a/Julia-notebooks/quadratic_formula.ipynb
+++ b/Julia-notebooks/quadratic_formula.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# Quadratic Formula\n",
@@ -14,7 +14,7 @@
     "$$\n",
     "  \\frac{-b \\pm \\sqrt{d}}{2 a},\n",
     "$$\n",
-    "where $d = \\sqrt{b^2 - 4 a c}$.  Translating that into a Julia function, we have"
+    "where $d = \\sqrt{b^2 - 4 a c}$.  Translating that into a Julia function, we have\n"
    ]
   },
   {
