--- a/handout/orthogonal_hall_of_fame.tex
+++ b/handout/orthogonal_hall_of_fame.tex
@@ -113,7 +113,7 @@ Let  $\{f_1, f_2, \dots, f_n \} \subset C_{[a,b]}$, and suppose that this set is
 orthonormal. Given $F \in C_{[a,b]}$,
 we would like to find $c_1, c_2, \dots, c_n \in \reals$ that minimize the function
 \begin{equation}
-  (c_1, c_1, \dots, c_n) \in \reals^n \mapsto \| F - \sum_{k=0}^n c_k f_k, F  \|_2^2
+  (c_1, c_2, \dots, c_n) \in \reals^n \mapsto \| F - \sum_{k=0}^n c_k f_k, F  \|_2^2
  \end{equation}
 The solution is
 \begin{equation}
@@ -213,7 +213,7 @@ And
   \caption{Graph of $x\mapsto \frac{\uppi}{2} 
   - \frac{4}{\uppi}
     \sum_{k=0}^3 \frac{\cos((2 k+1) x)}{(2k+1)^2}$
-    on the interval $[-\uppi, \uppi]$}
+    on the interval $[-\uppi, \uppi]$.}
     \end{figure}
   \end{center}
 \end{frame}
@@ -227,7 +227,7 @@ And
   \caption{Graph of $x\mapsto \frac{\uppi}{2} 
   - \frac{4}{\uppi}
     \sum_{k=0}^3 \frac{\cos((2 k+1) x)}{(2k+1)^2}$
-    on the interval $[-3\uppi, 3\uppi]$}
+    on the interval $[-3\uppi, 3\uppi]$.}
     \end{figure}
   \end{center}
 \end{frame}
