minor tweak to clarity
minor tweak to clarity

--- a/handout/generating-functions.tex
+++ b/handout/generating-functions.tex
@@ -99,7 +99,7 @@ For positive integers $n$ and $k$ with $n \geq k$, we define
 \begin{handlist}
  \item Spoken $\binom{n}{k}$ is ``$n$ choose $k$.''
  \item For a set $A$ with cardinality n,  the number of subsets of $A$ that have cardinality $k$ is $\binom{n}{k}$.
- \item The cardinality two subsets of $\{1,2,3\}$ are $\{1,2\},\{1,3\},$ and $\{2,3\}$.  So  $\binom{3}{2} = 3$.
+ \item The subsets of  $\{1,2,3\}$ that have cardinality two are $\{1,2\},\{1,3\},$ and $\{2,3\}$.  So  $\binom{3}{2} = 3$.
 \end{handlist}
 \end{frame}
 
